wrflw - add CD section

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,3 +38,19 @@ jobs:
           tags: |
             alejafuentes/kube-news:latest
             alejafuentes/kube-news:${{github.run_number}}
+  CD:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Kubernetes Set Context
+        uses: Azure/k8s-set-context@v3.0
+        with:
+          method: kubeconfig
+          kubeconfig: ${{secrets.K8S_CONFIG}}
+          
+      - name: Deploy to Kubernetes cluster
+        uses: Azure/k8s-deploy@v4.3
+        with:
+          images: alejafuentes/kube-news:${{github.run_number}}
+          manifests: |
+            k8s/deployment.yaml
