--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
             alejafuentes/kube-news:${{github.run_number}}
   CD:
     runs-on: ubuntu-latest
-    
+    needs: [CI]
     steps:
       - name: Kubernetes Set Context
         uses: Azure/k8s-set-context@v3.0
