wrflw - update manifest

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,4 +53,4 @@ jobs:
         with:
           images: alejafuentes/kube-news:${{github.run_number}}
           manifests: |
-            ./k8s/deployment.yaml
+            k8s/deployment.yaml
