--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,4 +43,4 @@ jobs:
         with:
           images: alejafuentes/kube-news:${{github.run_number}}
           manifests: |
-            k8s/deployment.yaml
+            ./k8s/deployment.yaml
