wrflw - change identation

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,5 +42,4 @@ jobs:
         uses: Azure/k8s-deploy@v4.3
         with:
           images: alejafuentes/kube-news:${{github.run_number}}
-          manifests: |
-            ./k8s/deployment.yaml
+          manifests: k8s/deployment.yaml
