--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Build and push Docker images
         uses: docker/build-push-action@v3.1.1
         with:
+          context: .
           file: ./src/Dockerfile
-          context: ./src
           push: true
           tags: |
             alejafuentes/kube-news:latest
